# SODAS

./: LICENSE  README.md  index.html  setup.cfg
example/: sodas_script.py
src/: sodas++.py  utils.py
src/sodas/: __init__.py.py
src/sodas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sodas/model/: __init__.py.py  sodas.py
src/sodas/nn/models/: __init__.py  alignn.py
src/sodas/utils/: alignn.py  graph.py  structure_properties.py  utils.py
