[metadata]
name = sodas
version = 0.0.1
author = James Chapman
author_email = jc112358@bu.edu
description = A library for implementing SODAS++ framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Materials-Informatics-Laboratory/SODAS

[option]
package_dir=
    =src
packages=find:
python_requires = >= 3.7
install_requires =
    ase
    torch>=1.8.1
    torch-geometric>=2.0.1
    networkx
    scipy
    umap
    graphite

[options.packages.find]
where=src
